<resources>
    <string name="app_name">GitHubUser</string>
    <string name="username">Username</string>
    <string name="ivAvatar">avatar</string>
    <string name="search_hint">Cari user Github disini</string>
    <string name="search">search</string>
    <string name="name">Nama Lengkap</string>
    <string name="count">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="following_tabs">Following tabs</string>

    <string name="title_detail">Detail Github User</string>
    <string name="title_setting">Setting Dark Mode</string>
    <string name="title_favorite">Favorite Github User</string>

    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>


</resources>